@@ -1,7 +1,9 @@
 Output Info:
   show_time_lapse    = TRUE
   show_time_hires    = FALSE
+  show_raw_text      = FALSE
   suppress_data      = FALSE
+  protect_prompt     = FALSE
   no_hints_send      = FALSE
   no_hints_recv      = FALSE
   no_hints_info      = FALSE
