@@ -1,8 +1,8 @@
 Transport Info:
   type            = socket-inet
+  inet protocol   = 4
   server          = TESTSERVER
   port            = 9999
   local interface = 9.9.9.9
   local port      = 8888
-  sockfile        = 
-  process         = 
+  copy routing    = copy-routing-host.example.com
