@@ -1,5 +1,5 @@
 title: tests against the TRANSPORT section
 pre action: REMOVE_FILE %OUTDIR%/%TESTID%.out %OUTDIR%/%TESTID%.diff
-test action: CMD %SWAKS% --dump transport --to user@example.com --helo host.example.com --from from@example.com --output-file %OUTDIR%/%TESTID%.out --server TESTSERVER --port 9999 --local-interface 9.9.9.9 --lport 8888 --copy-routing copy-routing-host.example.com -4
+test action: CMD %SWAKS% --dump transport --to user@example.com --helo host.example.com --from from@example.com --output-file %OUTDIR%/%TESTID%.out --server TESTSERVER -6
 test action: MUNGE file:%OUTDIR%/%TESTID%.out "munge_globs" "munge_dates,'^(Subject|Date):'" "munge_message_ids,'^Message-Id:'"
 test result: COMPARE_FILE %TESTDIR%/%TESTID%.out %OUTDIR%/%TESTID%.out
