@@ -6,3 +6,5 @@ PROXY Info:
   source port = 99
   dest        = 8.8.8.8
   dest port   = 88
+  protocol    = DGRAM
+  command     = LOCAL
