@@ -1,2 +1,10 @@
 TLS / Encryption Info:
-  tls = no
+  tls                 = starttls on connect (required)
+  peer cert           = 
+  local cert          = 
+  local key           = 
+  local cipher list   = 
+  ca path             = 
+  verify server cert  = FALSE
+  available protocols = SSLv2, SSLv3, TLSv1, TLSv1_1, TLSv1_2
+  requested protocols = 
